# AgentSociety

./: .dockerignore  .gitignore  .gitlab-ci.yml  .readthedocs.yaml  CHANGELOG.md  DEVELOPMENT.md  Dockerfile  Makefile  README.md  READTHEDOCS.md  pyproject.toml  setup.py
.github/workflows/: agentsociety-benchmark-publish.yml  agentsociety-community-publish.yml  agentsociety-publish.yml  python-publish.yml
agentsociety/: DESIGN.md  __init__.py
agentsociety/agent/: __init__.py  agent.py  agent_base.py  block.py  context.py  decorator.py  dispatcher.py  distribution.py  memory_config_generator.py  prompt.py  trigger.py
agentsociety/cityagent/: __init__.py  bankagent.py  firmagent.py  governmentagent.py  initial.py  memory_config.py  message_intercept.py  metrics.py  nbsagent.py  sharing_params.py  societyagent.py
agentsociety/cli/: cli.py  docker_runner.py  sim.py
agentsociety/configs/: __init__.py  agent.py  env.py  exp.py  utils.py
agentsociety/environment/: __init__.py  environment.py  mapdata.py  simulator.py
agentsociety/executor/: process.py
agentsociety/filesystem/: client.py
agentsociety/llm/: __init__.py  embeddings.py  llm.py
agentsociety/memory/: const.py  memory.py  memory_base.py  state.py
agentsociety/message/: __init__.py  message_interceptor.py  messager.py
agentsociety/metrics/: __init__.py  mlflow_client.py
agentsociety/s3/: __init__.py  client.py
agentsociety/simulation/: __init__.py  agentgroup.py  agentsociety.py  simulation.py  type.py
agentsociety/storage/: __init__.py  avro.py  pgsql.py  type.py
agentsociety/survey/: models.py
agentsociety/tools/: __init__.py  tool.py
agentsociety/utils/: __init__.py  avro_schema.py  decorators.py  pg_query.py  survey_util.py
agentsociety/webapi/: README.md  app.py
agentsociety/workflow/: __init__.py  block.py  prompt.py  trigger.py
docker/: README.md  docker-compose-cn.yml  docker-compose.yml
docker/mlflow/: Dockerfile
docs/: conf.py  index.md  requirements.txt
docs/01-get-started/: 01-prerequisites.md  02-installation.md  03-code.md  04-webui.md  index.md
docs/01-quick-start/: 01-prerequisites.md  02-start-your-first-simulation.md  03-conduct-your-first-experiment.md
docs/02-configurations/: 01-simulation-config.md  02-experiment-config.md
docs/02-development-guide/: 01-experiment.md  03-map.md  (+4 more)
frontend/: index.html  package-lock.json  package.json  vite.config.ts
scripts/: build_docker.sh  init_venv.sh  pyproject2requirements.py  rebuild_frontend.sh
(+481 files in other folders)
